--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -79,7 +79,7 @@
 {% block beforeContent %}
   {{ govukPhaseBanner({
     tag: { text: "Beta" },
-    html: 'This is a new service - your <a class="govuk-link" rel="noreferrer noopener" target="_blank" href="https://defragroup.eu.qualtrics.com/jfe/form/SV_02KhhVirzVmY0QK">feedback</a> will help us to improve it.'
+    html: 'This is a new service - your <a class="govuk-link help-link" rel="noreferrer noopener" target="_blank" href="https://defragroup.eu.qualtrics.com/jfe/form/SV_02KhhVirzVmY0QK">feedback</a> will help us to improve it.'
   }) }}
 {% endblock %}
 
