--- a/src/views/partials/results/filters.njk
+++ b/src/views/partials/results/filters.njk
@@ -4,9 +4,9 @@
   <form action="{{filterStudyPeriodPath}}" id="study_period_filter-{{filterInstance}}" method="post">
     <section class="defra-filter-section">
       <h2 class='govuk-heading-m filter-study-period-heading govuk-!-margin-top-3 govuk-!-margin-bottom-3'>
-      Study period
+      Study period including:
     </h2>
-
+     <p class="search-result__parameter-value">Results may include records from studies that overlap with your selected dates</p>
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
           <div class="filter-study-period-group">
