--- a/src/views/screens/home/privacy_policy.njk
+++ b/src/views/screens/home/privacy_policy.njk
@@ -27,7 +27,7 @@
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">Privacy policy</h1>
         <h1 class="govuk-heading-m ">Find natural capital data</h1>
          <p class="govuk-body-m">This privacy notice explains the privacy policies for the Find natural capital data service. If you have any queries about the content of this privacy notice, please email  <a class="govuk-link help-link" href="mailto: data.protection@defra.gov.uk">data.protection@defra.gov.uk.</a></p>
-      <h1 class="govuk-heading-m">What data we collect</h1>
+      <h1 class="govuk-heading-m">Who collects your personal data</h1>
         <p class="govuk-body-m">Department for Environment, Food and Rural Affairs (Defra) is the controller for the personal data we collect:</p>
 
          <p class="govuk-body-m ncea-static-page-line-item">Department for Environment, Food and Rural Affairs</p>
