disabled glossary link from home page

--- a/src/views/screens/home/template.njk
+++ b/src/views/screens/home/template.njk
@@ -36,9 +36,10 @@
         All natural capital resources in this service are classified into broad themes and specific categories for better
         clarity and understanding.
       </p>
-      <p class="govuk-body govuk-!-margin-bottom-6">
+      {# disabling it enable once glossary link is available #}
+      {# <p class="govuk-body govuk-!-margin-bottom-6">
         <a href="#" target="_blank" class='help-link'>Natural capital classification glossary</a>
-      </p>
+      </p> #}
       <p class="govuk-body govuk-!-margin-bottom-6">
         Use these natural capital theme and classification filters to help narrow down your search
       </p>
