--- a/src/views/partials/results/filters.njk
+++ b/src/views/partials/results/filters.njk
@@ -90,3 +90,40 @@
     </form>
   {% endif %}
 
+    {% if filterOptions.unique_originator_types and filterOptions.unique_originator_types.length > 0 %}
+    <form action="{{filterOriginatorTypePath}}" id="originator_type_filter-{{filterInstance}}" method="post">
+      <section>
+        <section class="defra-filter-options defra-filter-options--open govuk-!-margin-bottom-6  govuk-!-margin-top-3">
+          <section class="defra-filter-options__heading defra-filter-options__heading--open" id="toggle_originator_type-{{filterInstance}}">
+            <button type="button" class="defra-filter-options__button defra-filter-options__title">Data originator</button>
+            <svg version="1.1" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" width="0" height="0" class="defra-filter-options__icon defra-filter-options__icon--up" aria-hidden="true" focusable="false">
+              <path d="m798.16 609.84l-256-256c-16.683-16.683-43.691-16.683-60.331 0l-256 256c-16.683 16.683-16.683 43.691 0 60.331s43.691 16.683 60.331 0l225.84-225.84 225.84 225.84c16.683 16.683 43.691 16.683 60.331 0s16.683-43.691 0-60.331z"></path>
+            </svg>
+            <svg version="1.1" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" width="0" height="0" class="defra-filter-options__icon defra-filter-options__icon--down" aria-hidden="true" focusable="false">
+              <path d="m225.84 414.16l256 256c16.683 16.683 43.691 16.683 60.331 0l256-256c16.683-16.683 16.683-43.691 0-60.331s-43.691-16.683-60.331 0l-225.84 225.84-225.84-225.84c-16.683-16.683-43.691-16.683-60.331 0s-16.683 43.691 0 60.331z"></path>
+            </svg>
+          </section>
+          <section class="defra-filter-options__container  govuk-!-margin-top-3">
+            <section class="defra-filter-options__container--inner">
+              <div class="govuk-form-group govuk-!-margin-bottom-0">
+                <fieldset class="govuk-fieldset" aria-describedby="{{filterInstance+'originator-type-filter'}}">
+                  <div class="govuk-checkboxes" data-module="govuk-checkboxes" id="{{filterInstance+'originator-type-filter'}}">
+                    {% for item in filterOptions.unique_originator_types %}
+                      <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input defra-checkboxes__input" id="{{filterInstance+'-originator_type-'+item.value}}" name="originator_type" type="checkbox" value="{{item.value}}" {% if item.checked %} checked {% endif %} data-instance="{{filterInstance}}">
+                        <label class="govuk-label govuk-checkboxes__label defra-checkboxes__label" for="{{filterInstance+'-originator_type-'+item.value}}">
+                          {{item.text}}
+                        </label>
+                      </div>
+                    {% endfor %}
+                  </div>
+                </fieldset>
+              </div>
+            </section>
+          </section>
+        </section>
+        <div class="govuk-section-break--visible"></div>
+      </section>
+    </form>
+  {% endif %}
+
